# SFML_Learning

./: .gitignore  CMakeLists.txt
include/: Entity.hpp  Game.hpp  ResourceHolder.hpp  ResourceHolder.inl  Ship.hpp  TextureHolder.hpp  TextureHolder.inl
src/: Entity.cpp  Game.cpp  Ship.cpp  main.cpp
